# energyplus_project1

./: .gitignore  260603.idf  260603_v1.idf  README.md  convert_eso_to_csv.py  convert_gl2_eso.py  ep_api.py  gl2.idf  gl2_dynamic.idf  gl2_dynamic_simple.idf  gl2_dynamic_simple_loadtest.idf  gl2_dynamic_simple_widowshading.idf  kinetic_bipv.py  kinetic_bipv_simple.py  kinetic_bipv_simple_loadtest.py  kinetic_bipv_simple_windowshading.py  model_pythonpluginsystem.py  model_realscale.idf  model_realscale_10.idf  model_realscale_50.idf  model_realscale_60.idf  model_realscale_80.idf  model_realscale_90.idf  model_realscale_base.idf  model_realscale_v2.idf  model_realscale_v2_reduce_meter.idf  model_realscale_v2_reduce_row.idf  pyproject.toml  run_gl2_0to90.py  run_idf.py  run_simulation.md
backups/BIPV_Image_Prompts/: page_3.md  page_4.md  page_5.md  page_6.md  page_7.md  rule.md
case_analysis/case2/0_v2/: case2_0.csv
case_analysis/case2/10/: case2_10.csv
case_analysis/case2/20/: case2_20.csv
case_analysis/case2/30/: case2_30.csv
case_analysis/case2/60/: case2_60.csv
case_analysis/case2/80/: case2_80.csv
case_analysis/case3/: case3.csv
case_idf/: case3_v1.idf
case_idf/case2/: case2_30.idf  case2_70.idf
data/: BIPV_Models_Only.csv  BIPV_Selected_Models.csv
docs/: BIPV_Setup_Guide.md  PV_Module_Parameters_Explanation.md  dynamic_shading_plan.md  geometry_modification_limitation.md  project_summary.md  simulation_cleanup_guide.md
realscale_model_idf/: model_realscale_0.idf  model_realscale_20.idf  model_realscale_40.idf
(+30 files in other folders)
