[project]
name = "energyplus-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "besos>=2.2.3",
    "dartwork-mpl",
    "eppy>=0.5.69",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
dartwork-mpl = { git = "https://github.com/dartwork-repo/dartwork-mpl" }
